--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ screenshots:
     path: example/assets/example.gif
 
 environment:
-  sdk: ">=2.17.0 <= 3.7.12"
+  sdk: ">=3.2.6 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
